# tablo

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  readme.rst  setup.py  tox.ini
.github/workflows/: test.yaml  tests.yaml
docs/: Makefile  about.rst  conf.py  data_model.rst  index.rst  install.rst  make.bat  readme.txt  readme_link.rst  settings.py
docs/interfaces/: arcgis.rst  index.rst
docs/upload/: index.rst
tablo/: __init__.py  api.py  csv_utils.py  exceptions.py  forms.py  geom_utils.py  models.py  router.py  storage.py  urls.py  utils.py  views.py  wkt.py
tablo/interfaces/arcgis/: urls.py  views.py
tablo/migrations/: 0001_initial.py  0002_temporaryfile.py  0003_auto_20160106_1509.py  0004_featureservicelayerrelations.py  0005_auto_20160721_1441.py  0005_fix_esriGeometryPoints.py  0006_alter_geom_col_type.py  0007_update_integer_columns_to_bigint.py
tablo/tests/: addFeaturesTest.py  middleware.py  models_test.py  runtests.py  settings.py  tables.sql  test_csv_utils.py  test_geom_crud.py  test_models.py  test_utils.py  test_wkt.py
